# MooAId

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  EXAMPLES.md  LICENSE  README.md  config.yaml  docker-compose.yml  push-wiki.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh  shell.nix
.github/ISSUE_TEMPLATE/: blueprint.yml  bug_report.yml  docs_improvement.yml  feature_request.yml  question.yml
mooaid/: __init__.py
mooaid/api/: __init__.py
mooaid/cli/: __init__.py  main.py
mooaid/config/: __init__.py
mooaid/core/: __init__.py  opinion_engine.py  provider_factory.py
mooaid/profile/: __init__.py  builder.py  service.py
mooaid/providers/: __init__.py  gemini.py  ollama.py  openai.py  openrouter.py
mooaid/utils/: __init__.py
mooaid/webui/: app.js  index.html
mooaid/webui/css/: styles.css
mooaid/webui/js/: app.js
mooaid/webui/js/components/: SearchableSelect.js
tests/: __init__.py  test_api.py  test_config.py  test_opinion_engine.py  test_profile.py  test_profile_builder.py  test_profile_builder_api.py
wiki/: CLI-Usage.md  Configuration.md  Docker-Deployment.md  FAQ.md  Home.md  Installation-Guide.md  Profile-Builder.md  REST-API-Documentation.md
